--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*,
+::before,
+::after {
+    font-family: 'Alegreya';
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
