--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Magilio';
+    src: url('./fonts/Magilio.otf');
+}
+
+@font-face {
+    font-family: 'Alegreya Semibold';
+    src: url('./fonts/Alegreya-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: 'Alegreya Sans Regular';
+    src: url('./fonts/AlegreyaSans-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Alegreya Sans Thin';
+    src: url('./fonts/AlegreyaSans-Light.ttf');
+}
+
 *,
 ::before,
 ::after {
-    font-family: 'Alegreya';
+    font-family: 'Alegreya Semibold';
     box-sizing: border-box;
     padding: 0;
     margin: 0;
