refactor: aligning all text to have the same font size and font family

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@
     src: url('./fonts/AlegreyaSans-Light.ttf');
 }
 
+@font-face {
+    font-family: 'Alegreya Sans Medium';
+    src: url('./fonts/AlegreyaSans-Medium.ttf');
+}
+
 *,
 ::before,
 ::after {
