--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,21 @@
     src: url('./fonts/AlegreyaSans-Medium.ttf');
 }
 
+@font-face {
+    font-family: 'Alegreya Sans Bold';
+    src: url('./fonts/AlegreyaSans-Black.ttf');
+}
+
+@font-face {
+    font-family: 'Alegreya Sans Italic';
+    src: url('./fonts/AlegreyaSans-Italic.ttf');
+}
+
+@font-face {
+    font-family: 'Alegreya Sans Bold and Italic';
+    src: url('./fonts/AlegreyaSans-BlackItalic.ttf');
+}
+
 *,
 ::before,
 ::after {
