--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,9 @@ body {
 .home-bg {
     background: url('/src/assets/images/home/bg-min.png') no-repeat;
     background-size: cover;
-    background-position: center;
+    background-repeat: repeat;
+    top: -30vw;
+    height: calc(100% + 30vw);
 }
 
 @font-face {
