--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,19 @@ body {
     height: calc(100% + 30vw);
 }
 
+.partner-bg {
+    background: url('/src/assets/images/home/bg-min.png') no-repeat;
+    background-size: cover;
+    top: -30vw;
+    height: calc(100% + 20vw);
+}
+
+.rumpun-bg {
+    background: url('/src/assets/images/home/bg-min.png') no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
 @font-face {
     font-family: 'Magilio';
     src: url('./fonts/Magilio.otf');
