--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,9 @@ body {
 }
 
 .partner-bg {
-    background: url('/src/assets/images/home/bg-min.png') no-repeat;
+    background: url('/src/assets/images/search/bg-min.png') no-repeat;
     background-size: cover;
-    top: -30vw;
-    height: calc(100% + 20vw);
+    height: 85%;
 }
 
 .rumpun-bg {
